build/log/idf_py_stdout_output_11528
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\jakob\Documents\ESP-Home\FallDetecter\build\bootloader\esp-idf\esptool_py && C:\Espressif\esp\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/jakob/Documents/ESP-Home/FallDetecter/build/bootloader/bootloader.bin"
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/bmi.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/bmi.c.obj 
ccache C:\Espressif\esp\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/jakob/Documents/ESP-Home/FallDetecter/build/config -IC:/Users/jakob/Documents/ESP-Home/FallDetecter/main -IC:/esp/esp-idf/components/newlib/platform_include -IC:/esp/esp-idf/components/freertos/config/include -IC:/esp/esp-idf/components/freertos/config/include/freertos -IC:/esp/esp-idf/components/freertos/config/xtensa/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/esp-idf/components/freertos/esp_additions/include -IC:/esp/esp-idf/components/esp_hw_support/include -IC:/esp/esp-idf/components/esp_hw_support/include/soc -IC:/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/esp/esp-idf/components/esp_hw_support/dma/include -IC:/esp/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/esp-idf/components/heap/include -IC:/esp/esp-idf/components/heap/tlsf -IC:/esp/esp-idf/components/log/include -IC:/esp/esp-idf/components/soc/include -IC:/esp/esp-idf/components/soc/esp32 -IC:/esp/esp-idf/components/soc/esp32/include -IC:/esp/esp-idf/components/soc/esp32/register -IC:/esp/esp-idf/components/hal/platform_port/include -IC:/esp/esp-idf/components/hal/esp32/include -IC:/esp/esp-idf/components/hal/include -IC:/esp/esp-idf/components/esp_rom/include -IC:/esp/esp-idf/components/esp_rom/esp32/include -IC:/esp/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/esp-idf/components/esp_rom/esp32 -IC:/esp/esp-idf/components/esp_common/include -IC:/esp/esp-idf/components/esp_system/include -IC:/esp/esp-idf/components/esp_system/port/soc -IC:/esp/esp-idf/components/esp_system/port/include/private -IC:/esp/esp-idf/components/xtensa/esp32/include -IC:/esp/esp-idf/components/xtensa/include -IC:/esp/esp-idf/components/xtensa/deprecated_include -IC:/esp/esp-idf/components/lwip/include -IC:/esp/esp-idf/components/lwip/include/apps -IC:/esp/esp-idf/components/lwip/include/apps/sntp -IC:/esp/esp-idf/components/lwip/lwip/src/include -IC:/esp/esp-idf/components/lwip/port/include -IC:/esp/esp-idf/components/lwip/port/freertos/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/esp-idf/components/spi_flash/include -IC:/esp/esp-idf/components/esp_driver_i2c/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/jakob/Documents/ESP-Home/FallDetecter=. -fmacro-prefix-map=C:/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/bmi.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\bmi.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/bmi.c.obj -c C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.c
C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.c:16:6: error: conflicting types for 'BMI160_Init'; have 'void(BmiType *, struct i2c_master_bus_t **, uint8_t)' {aka 'void(BmiType *, struct i2c_master_bus_t **, unsigned char)'}
   16 | void BMI160_Init(BmiType * bmi, i2c_master_bus_handle_t * handle, uint8_t dev_adress)
      |      ^~~~~~~~~~~
In file included from C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.c:4:
C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.h:59:6: note: previous declaration of 'BMI160_Init' with type 'void(BmiType *, struct i2c_master_dev_t **, uint8_t)' {aka 'void(BmiType *, struct i2c_master_dev_t **, unsigned char)'}
   59 | void BMI160_Init(BmiType * bmi, i2c_master_dev_handle_t * handle, uint8_t dev_adress);
      |      ^~~~~~~~~~~
In file included from C:/esp/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from C:/esp/esp-idf/components/esp_hw_support/include/esp_cpu.h:20,
                 from C:/esp/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from C:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from C:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from C:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.h:8:
C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.c: In function 'BMI160_WriteRegister':
C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.c:30:44: error: passing argument 1 of 'i2c_master_transmit' from incompatible pointer type [-Wincompatible-pointer-types]
   30 |     ESP_ERROR_CHECK(i2c_master_transmit(bmi->handle, write_buf, sizeof(write_buf), -1));
      |                                         ~~~^~~~~~~~
      |                                            |
      |                                            i2c_master_bus_handle_t {aka struct i2c_master_bus_t *}
C:/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
In file included from C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.h:13:
C:/esp/esp-idf/components/esp_driver_i2c/include/driver/i2c_master.h:135:55: note: expected 'i2c_master_dev_handle_t' {aka 'struct i2c_master_dev_t *'} but argument is of type 'i2c_master_bus_handle_t' {aka 'struct i2c_master_bus_t *'}
  135 | esp_err_t i2c_master_transmit(i2c_master_dev_handle_t i2c_dev, const uint8_t *write_buffer, size_t write_size, int xfer_timeout_ms);
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.c: In function 'BMI160_ReadRegister':
C:/Users/jakob/Documents/ESP-Home/FallDetecter/main/bmi.c:34:52: error: passing argument 1 of 'i2c_master_transmit_receive' from incompatible pointer type [-Wincompatible-pointer-types]
   34 |     ESP_ERROR_CHECK(i2c_master_transmit_receive(bmi->handle, &regg_adress, sizeof(regg_adress), data_buf, sizeof(data_buf), -1));
      |                                                 ~~~^~~~~~~~
      |                                                    |
      |                                                    i2c_master_bus_handle_t {aka struct i2c_master_bus_t *}
C:/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
C:/esp/esp-idf/components/esp_driver_i2c/include/driver/i2c_master.h:174:63: note: expected 'i2c_master_dev_handle_t' {aka 'struct i2c_master_dev_t *'} but argument is of type 'i2c_master_bus_handle_t' {aka 'struct i2c_master_bus_t *'}
  174 | esp_err_t i2c_master_transmit_receive(i2c_master_dev_handle_t i2c_dev, const uint8_t *write_buffer, size_t write_size, uint8_t *read_buffer, size_t read_size, int xfer_timeout_ms);
      |                                       ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
[5/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/fall_detecter.c.obj
ninja: build stopped: subcommand failed.
